--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 .idea/**/shelf
 .idea/
 *.iml
+.idea
 pom.xml
+target
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -54,7 +56,7 @@ cmake-build-*/
 
 # IntelliJ
 out/
-target/
+
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
@@ -78,4 +80,3 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-
